<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444654">

    <View
        android:id="@+id/backgroundView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#444654" />

    <TextView
        android:id="@+id/titleBar1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="#343541"
        android:fontFamily="monospace"
        android:gravity="center"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/powertools"
        android:textColor="#CCCCCC"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="304sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/titleBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleBar2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:background="#343541"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name_show"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="304sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar1" />

    <Space
        android:id="@+id/space_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextMenge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar2" />

    <EditText
        android:id="@+id/editTextMenge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="monospace"
        android:gravity="center"
        android:hint="@string/volume_beverage"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/buttonMengeEinheit"
        app:layout_constraintHeight_percent="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space_header"
        />

    <Button
        android:id="@+id/buttonMengeEinheit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="monospace"
        android:paddingHorizontal="8dp"
        android:text="mℓ"
        app:layout_constraintWidth_percent="0.3"

        android:textColor="#FFFFFF"
        app:autoSizeMinTextSize="1sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@id/editTextMenge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextMenge"
        app:layout_constraintTop_toTopOf="@id/editTextMenge"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editTextProzent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="monospace"
        android:gravity="center"
        android:hint="@string/percent_alcohol_edittext"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/textViewProzentEinheit"

        app:layout_constraintHeight_percent="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextMenge"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewProzentEinheit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:paddingHorizontal="8dp"
        android:layout_marginStart="12dp"

        android:gravity="center"
        android:padding="12dp"
        android:text="@string/unit_vol"
        android:fontFamily="monospace"
        app:layout_constraintWidth_percent="0.3"
        android:textColor="#FFFFFF"
        app:autoSizeMinTextSize="1sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintTop_toTopOf="@id/editTextProzent"
        app:layout_constraintBottom_toBottomOf="@id/editTextProzent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextProzent" />

    <TextView
        android:id="@+id/textViewReinerAlkohol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="24sp"
        android:maxLines="1"
        android:text="@string/line_pure_alcohol_info"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextProzent" />

    <EditText
        android:id="@+id/editTextGramm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:autoSizeMaxTextSize="304sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintHeight_percent="0.067"
        android:textSize="15sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="monospace"
        android:gravity="center"
        android:hint="@string/pure_alcohol"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@id/textViewGrammEinheit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewReinerAlkohol"
        tools:ignore="Autofill,VisualLintOverlap" />

    <TextView
        android:id="@+id/textViewGrammEinheit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:padding="0dp"
        android:fontFamily="monospace"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeTextType="uniform"
        app:layout_constraintHeight_percent="0.067"
        app:layout_constraintWidth_percent="0.3"

        android:paddingHorizontal="0dp"
        android:layout_marginStart="12dp"
        android:text="@string/unit_grams"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@id/editTextGramm"
        app:layout_constraintBottom_toBottomOf="@id/editTextGramm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextGramm" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/buttonclearbackground"
        android:fontFamily="monospace"
        android:text="@string/button_clear"
        android:textColor="#FFFFFF"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="26sp"
        android:maxLines="1"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@id/buttonCalculate"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextGramm"
        app:layout_constraintWidth_percent="0.3"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="26sp"
        android:maxLines="1"
        android:background="@drawable/button_background"
        android:fontFamily="monospace"
        android:text="@string/button_calculate"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toEndOf="@id/buttonClear"
        app:layout_constraintTop_toBottomOf="@id/editTextGramm"
        tools:ignore="UnusedAttribute" />

    <Space
        android:id="@+id/space_between_buttons_and_explanation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".108"
        app:layout_constraintTop_toBottomOf="@id/buttonCalculate"
        app:layout_constraintBottom_toTopOf="@id/explanationTextview" />

    <TextView
        android:id="@+id/explanationTextview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="monospace"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        app:layout_constraintHeight_percent="0.27"
        android:text="@string/anleitung"
        android:textColor="#E6E6E6"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="0.01sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/infoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space_between_buttons_and_explanation" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/infoButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/infobuttonforblinds"
        app:icon="@drawable/info"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        android:layout_marginTop="0dp"
        app:iconSize="24dp"
        app:iconTint="#FFFFFF"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="24dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:backgroundTint="@android:color/transparent"
        app:rippleColor="#33FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.constraintlayout.widget.ConstraintLayout>